--- a/scaffold-web/src/main/webapp/WEB-INF/web.xml
+++ b/scaffold-web/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:springMVC.xml</param-value>
+		<param-value>classpath:spring-mvc.xml</param-value>
 	</context-param>
 	
 	<!--过滤字符集 -->
@@ -24,18 +24,18 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!-- springMVC -->
+	<!-- spring-mvc -->
 	<servlet>
-		<servlet-name>springMVC</servlet-name>
+		<servlet-name>spring-mvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:springMVC.xml</param-value>
+			<param-value>classpath:spring-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>springMVC</servlet-name>
+		<servlet-name>spring-mvc</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 	<listener>
