--- a/scaffold-web/src/main/webapp/WEB-INF/web.xml
+++ b/scaffold-web/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,11 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- 防止Spring内存溢出监听器 -->  
+    <listener>  
+        <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>  
+    </listener> 
+
 	<!-- spring-mvc -->
 	<servlet>
 		<servlet-name>spring-mvc</servlet-name>
