--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<servlet.api.version>2.5</servlet.api.version>
 		<spring.version>4.2.6.RELEASE</spring.version>
 		<log4j.version>1.2.17</log4j.version>
+		<jackson.version>2.7.4</jackson.version>
+		<jstl.version>1.2</jstl.version>
 	</properties>
 
 	<repositories>
@@ -68,33 +70,40 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.5.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.5.1</version>
-        </dependency>
-          
-        <!-- 上传组件包 -->  
-        <dependency>  
-            <groupId>commons-fileupload</groupId>  
-            <artifactId>commons-fileupload</artifactId>  
-            <version>1.3.1</version>  
-        </dependency>  
-        <dependency>  
-            <groupId>commons-io</groupId>  
-            <artifactId>commons-io</artifactId>  
-            <version>2.4</version>  
-        </dependency>  
-        <dependency>  
-            <groupId>commons-codec</groupId>  
-            <artifactId>commons-codec</artifactId>  
-            <version>1.9</version>  
-        </dependency>  
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<!-- JSTL标签类 -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+
+		<!-- 上传组件包 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
 	</dependencies>
 </project>
