--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<servlet.api.version>2.5</servlet.api.version>
 		<spring.version>4.2.6.RELEASE</spring.version>
 		<log4j.version>1.2.17</log4j.version>
+		<jackson.version>2.5.1</jackson.version>
 	</properties>
 
 	<repositories>
@@ -72,12 +73,12 @@
 		<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.5.1</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.5.1</version>
+            <version>${jackson.version}</version>
         </dependency>
           
         <!-- 上传组件包 -->  
