--- a/scaffold-web/src/main/webapp/WEB-INF/web.xml
+++ b/scaffold-web/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,16 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
 
-<web-app>
 	<display-name>脚手架</display-name>
-	
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring-mvc.xml</param-value>
 	</context-param>
-	
+
 	<!--过滤字符集 -->
 	<filter>
 		<filter-name>encoding</filter-name>
@@ -24,10 +25,10 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!-- 防止Spring内存溢出监听器 -->  
-    <listener>  
-        <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>  
-    </listener> 
+	<!-- 防止Spring内存溢出监听器 -->
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 
 	<!-- spring-mvc -->
 	<servlet>
