--- a/scaffold-web/src/main/webapp/WEB-INF/web.xml
+++ b/scaffold-web/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-mvc.xml</param-value>
+		<param-value>classpath:spring-mvc.xml,classpath:spring.xml,classpath:spring-mybatis.xml</param-value>
 	</context-param>
 
 	<!--过滤字符集 -->
