--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.6.RELEASE</spring.version>
-		<mybatis.version>3.1.1</mybatis.version>
-		<mybatis-spring.version>1.1.1</mybatis-spring.version>
-		<mysql.version>5.1.21</mysql.version>
-		<druid.version>1.0.13</druid.version>
+		<mybatis.version>3.4.0</mybatis.version>
+		<mybatis-spring.version>1.3.0</mybatis-spring.version>
+		<mysql.version>5.1.38</mysql.version>
+		<druid.version>1.0.20</druid.version>
 		<aspectjweaver.version>1.7.1</aspectjweaver.version>
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
 		<junit.version>4.12</junit.version>
@@ -28,6 +28,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<jackson.version>2.7.4</jackson.version>
 		<jstl.version>1.2</jstl.version>
+		<pagehelper.version>4.1.6</pagehelper.version>
 	</properties>
 
 	<repositories>
@@ -69,6 +70,16 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
@@ -140,6 +151,11 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectjweaver.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>${pagehelper.version}</version>
 		</dependency>
 	</dependencies>
 </project>
