--- a/scaffold-web/src/main/resources/log4j.properties
+++ b/scaffold-web/src/main/resources/log4j.properties
@@ -1,9 +1,13 @@
-log4j.rootCategory=INFO, stdout
+log4j.rootLogger=DEBUG,stdout,logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{2}.%M() - %m%n
 
-log4j.category.org.springframework.beans.factory=DEBUG
-
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=${webApp.root}/logs/log.html
+log4j.appender.logfile.MaxFileSize=2000KB
+log4j.appender.logfile.MaxBackupIndex=1
+log4j.appender.logfile.layout=com.yh.scaffold.common.util.log4j.FormatHTMLLayout
+log4j.appender.logfile.layout=org.apache.log4j.HTMLLayout
 
