--- a/scaffold-core/src/main/resources/config.properties
+++ b/scaffold-core/src/main/resources/config.properties
@@ -3,3 +3,9 @@ validationQuery=SELECT 1
 jdbc_url=jdbc:mysql://127.0.0.1:3306/scaffold?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=root
 jdbc_password=123456
+
+domain.base.url=http://localhost:8085
+system.name=脚手架
+system.version=1.0
+system.description=ssm框架
+locale=zh_CN
